<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_25dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/login_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_25dp"
            android:fontFamily="@font/zh_blod"
            android:gravity="left"
            android:text="@string/LoginPage_title"
            android:textColor="@color/ice_deep"
            android:textSize="@dimen/dimen_40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/login_serverConf_btn"
            android:layout_width="@dimen/dimen_45dp"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginLeft="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_25dp"
            android:background="@drawable/server_emp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/welcome_banner_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_60dp"
        android:theme="@style/LoginBanner"
        app:layout_constraintBottom_toTopOf="@+id/login_username_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:fontFamily="@font/zh_slim"
        android:text="@string/LoginPage_username"
        android:theme="@style/LoginTextColor"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_username_et"/>

    <EditText
        android:id="@+id/login_username_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:fontFamily="@font/en_blod"
        android:textColor="@color/ice_deep"
        android:textSize="@dimen/dimen_20sp"
        android:text="1111"
        android:maxLines="1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/login_password_tv" />

    <TextView
        android:id="@+id/login_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:fontFamily="@font/zh_slim"
        android:text="@string/LoginPage_password"
        android:theme="@style/LoginTextColor"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_passwd_et" />

    <EditText
        android:id="@+id/login_passwd_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:fontFamily="@font/en_blod"
        android:textColor="@color/ice_deep"
        android:textSize="@dimen/dimen_20sp"
        android:text="admin"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_login_btn" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_25dp"
        android:background="@color/light_gray"
        android:fontFamily="@font/zh_slim"
        android:text="@string/LoginPage_title"
        android:textColor="@color/ice_deep"
        android:textSize="@dimen/dimen_30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>